--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
