--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
+        "express-fileupload": "^1.5.1",
         "firebase-admin": "^13.0.2",
         "joi": "^17.13.3"
     }
