--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "dependencies": {
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "moment": "^2.30.1",
+    "react-big-calendar": "^1.17.1",
+    "react-calendar": "^5.1.0",
     "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
