--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,9 @@
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "express-fileupload": "^1.5.1",
+        "express-rate-limit": "^7.5.0",
         "firebase-admin": "^13.0.2",
-        "joi": "^17.13.3"
+        "joi": "^17.13.3",
+        "winston": "^3.17.0"
     }
 }
