--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,14 @@
         "cors": "^2.8.5",
         "date-fns": "^4.1.0",
         "dotenv": "^16.4.7",
+        "exceljs": "^4.4.0",
         "express": "^4.21.2",
         "express-fileupload": "^1.5.1",
         "express-rate-limit": "^7.5.0",
         "firebase-admin": "^13.0.2",
         "joi": "^17.13.3",
+        "json2csv": "^6.0.0-alpha.2",
+        "pdfkit": "^0.16.0",
         "winston": "^3.17.0"
     }
 }
