--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "author": "Andrea",
     "license": "ISC",
     "dependencies": {
+        "@google-cloud/logging-winston": "^6.0.0",
         "cors": "^2.8.5",
         "date-fns": "^4.1.0",
         "dotenv": "^16.4.7",
@@ -18,6 +19,7 @@
         "express-fileupload": "^1.5.1",
         "express-rate-limit": "^7.5.0",
         "firebase-admin": "^13.0.2",
+        "firebase-functions": "^6.3.2",
         "joi": "^17.13.3",
         "json2csv": "^6.0.0-alpha.2",
         "pdfkit": "^0.16.0",
