--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.7.9",
+    "busboy": "^1.6.0",
     "chart.js": "^4.4.7",
     "firebase": "^11.3.1",
     "moment": "^2.30.1",
