--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^1.8.2",
     "busboy": "^1.6.0",
+    "dotenv": "^16.4.7",
     "exceljs": "^4.4.0",
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.3.2",
