--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,15 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "ajv": "^8.12.0",
+    "axios": "^1.8.4",
+    "chart.js": "^4.4.8",
+    "clsx": "^2.1.1",
     "cra-template": "1.2.0",
     "dotenv": "^16.4.7",
     "firebase": "^11.4.0",
+    "i18next": "^24.2.3",
+    "i18next-browser-languagedetector": "^8.0.4",
+    "i18next-http-backend": "^3.0.2",
+    "lucide-react": "^0.487.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.18.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.4.1",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^7.1.1",
     "recharts": "^2.15.1",
     "web-vitals": "^4.2.4"
@@ -46,6 +59,7 @@
     "@babel/plugin-transform-private-property-in-object": "^7.25.9",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.33.2",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "typescript": "^4.9.5"
   }
 }
