--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.9",
     "busboy": "^1.6.0",
     "chart.js": "^4.4.7",
     "firebase": "^11.3.1",
+    "lucide-react": "^0.484.0",
     "moment": "^2.30.1",
     "react-big-calendar": "^1.17.1",
     "react-calendar": "^5.1.0",
-    "react-icons": "^5.4.0",
-    "react-router-dom": "^6.14.2"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^6.14.2",
+    "react-scripts": "^5.0.1",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "eslint": "^8.57.1",
+    "eslint-config-react-app": "^7.0.1"
   }
 }
