--- a/backend/firebase.json
+++ b/backend/firebase.json
@@ -1,17 +1,10 @@
 {
-  "functions": {
-    "source": "functions"
-  },
+  "functions": { "source": "functions" },
+
   "emulators": {
-    "functions": {
-      "port": 5001
-    },
-    "firestore": {
-      "port": 8080
-    },
-    "ui": {
-      "enabled": true,
-      "port": 4000
-    }
+    "functions": { "port": 5001 },
+    "firestore": { "port": 8080 },
+    "auth": { "port": 9099 },
+    "ui": { "enabled": true, "port": 4000 }
   }
 }
