--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -15,15 +15,19 @@
   "dependencies": {
     "axios": "^1.8.2",
     "busboy": "^1.6.0",
+    "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "exceljs": "^4.4.0",
-    "firebase-admin": "^12.7.0",
+    "express": "^4.19.2",
+    "express-rate-limit": "^7.5.0",
+    "firebase-admin": "^12.5.0",
     "firebase-functions": "^6.3.2",
+    "joi": "^17.13.3",
     "json2csv": "^6.0.0-alpha.2",
-    "pdfkit": "^0.16.0"
-  },
-  "devDependencies": {
-    "firebase-functions-test": "^3.4.0"
+    "pdfkit": "^0.16.0",
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0"
   },
   "private": true,
   "version": "1.0.0",
