--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -13,6 +13,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@sentry/google-cloud-serverless": "^9.14.0",
     "axios": "^1.8.2",
     "busboy": "^1.6.0",
     "cors": "^2.8.5",
