--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "firebase": "^11.3.1",
     "lucide-react": "^0.484.0",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.48",
     "react-big-calendar": "^1.17.1",
     "react-calendar": "^5.1.0",
     "react-icons": "^5.5.0",
