--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.18.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^15.4.1",
     "react-icons": "^4.10.1",
