--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -27,6 +27,7 @@
     "joi": "^17.13.3",
     "json2csv": "^6.0.0-alpha.2",
     "pdfkit": "^0.16.0",
+    "stripe": "^18.2.0",
     "uuid": "^11.1.0",
     "winston": "^3.17.0"
   },
