--- a/backend/firebase.json
+++ b/backend/firebase.json
@@ -1,6 +1,11 @@
 {
-  "functions": { "source": "functions" },
-
+  "functions": {
+    "source": "functions",
+    "runtime": "nodejs20",
+    "deployment": {
+      "platform": "gcfv1"
+    }
+  },
   "emulators": {
     "functions": { "port": 5001 },
     "firestore": { "port": 8080 },
