--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,12 @@
+REACT_APP_FIREBASE_API_KEY=AIzaSyDtcXEcXxQJqHzQB5Hjat82grMrOMQiwAM
+REACT_APP_FIREBASE_AUTH_DOMAIN=autotaskerbot.firebaseapp.com
+REACT_APP_FIREBASE_DATABASE_URL=https://autotaskerbot-default-rtdb.europe-west1.firebasedatabase.app
+REACT_APP_FIREBASE_PROJECT_ID=autotaskerbot
+REACT_APP_FIREBASE_STORAGE_BUCKET=autotaskerbot.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=791512243939
+REACT_APP_FIREBASE_APP_ID=1:791512243939:web:cee6a57d8fb4f7b5616fd6
+REACT_APP_FIREBASE_MEASUREMENT_ID=G-FLJ802DKNQ
+
 REACT_APP_FUNCTIONS_URL=https://api-yux5b3ux4q-ew.a.run.app
+
 
