--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.7",
     "exceljs": "^4.4.0",
     "express": "^4.19.2",
+    "express-list-endpoints": "^7.1.1",
     "express-rate-limit": "^7.5.0",
     "firebase-admin": "^12.5.0",
     "firebase-functions": "^6.3.2",
