--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -25,6 +25,7 @@
     "express-rate-limit": "^7.5.0",
     "firebase-admin": "^12.5.0",
     "firebase-functions": "^6.3.2",
+    "helmet": "^8.1.0",
     "joi": "^17.13.3",
     "json2csv": "^6.0.0-alpha.2",
     "pdfkit": "^0.16.0",
